# mad-cookiecutter

./: .gitignore  README.md  pyproject.toml  python-setup-tips.md
ds-base/: cookiecutter.json  coookiecutter.json
ds-base/hooks/: post_gen_project.py
ds-base/{{cookiecutter.project_slug}}/: .bumpversion.toml  .gitignore  .gitlab-ci.yml  .ruff.toml  README.md  _tasks.py  pyproject.toml
ds-base/{{cookiecutter.project_slug}}/.github/workflows/: test-and-lint.yml
ds-base/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
ds-base/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
py-package/: cookiecutter.json
py-package/hooks/: post_gen_project.py
py-package/{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .ruff.toml  README.md  _tasks.py  pyproject.toml
py-package/{{cookiecutter.project_slug}}/.github/workflows/: publish.yml  test-and-lint.yml
py-package/{{cookiecutter.project_slug}}/_debug/: README.md
py-package/{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
py-package/{{cookiecutter.project_slug}}/docs/modules/: index.rst
py-package/{{cookiecutter.project_slug}}/examples/: README.rst
py-package/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
