[project]
authors = [
    {name = "Arne Küderle", email = "a.kuederle@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.7"
dependencies = []
name = "mad-cookiecutter"
version = "0.1.0"
description = "Base Project templates for the MaD-Lab"

[dependency-groups]
dev = [
    "cookiecutter<2.0.0,>=1.7.3",
]


[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


