[project]
authors = [
    {name = "Arne Küderle", email = "a.kuederle@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
name = "mad-cookiecutter"
version = "0.1.0"
description = "Base Project templates for the MaD-Lab"

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""


[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
    "cookiecutter>=2.6.0",
]

