[project]
authors = [
    {name = "Arne Küderle", email = "a.kuederle@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
name = "mad-cookiecutter"
version = "0.3.1"
description = "Base Project templates for the MaD-Lab"


[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
    "cookiecutter>=2.6.0",
]

