[project]
authors = [
    {name = "{{cookiecutter.your_name}}", email = "{{cookiecutter.email}}"},
]
requires-python = "{{cookiecutter.suported_python_version}}"
dependencies = []
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"  # Don't modify this line, it is managed by bumpversion
description = "{{cookiecutter.project_short_description}}"


{% if cookiecutter.notebook_handling == "jupytext" %}
[tool.jupytext]
formats = "ipynb,py:percent"
{% endif %}

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check {{cookiecutter.project_slug}} --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check {{cookiecutter.project_slug}} --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov={{cookiecutter.project_slug}} --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { cmd = "uvx bump-my-version" }
conf_jupyter = { cmd = "python -m ipykernel install --user --name {{cookiecutter.project_slug}}", help = "Add a new jupyter kernel for the project." }
{% if cookiecutter.notebook_handling == "nbstripout" %}conf_nbstripout = { cmd = "nbstripout --install", help = "Enable the nbstripout pre commit hook."}
{% elif cookiecutter.notebook_handling == "jupytext" %}sync_notebooks = { cmd = "jupytext --sync 'experiments/**/notebooks/*.*py*' --set-kernel={{cookiecutter.project_slug}}", help = "Manually sync all notebooks with their jupytext counter part."}{% endif %}
remove_jupyter = { cmd = "jupyter kernelspec uninstall {{cookiecutter.project_slug}}", help = "Remove the project specific jupyter kernel."}
experiment = { script = "_tasks:task_new_experiment()", help = "Create the boilerplate for a new experiment in the experiment subfolder."}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"